--- a/css/tooplate-wedding-lite.css
+++ b/css/tooplate-wedding-lite.css
@@ -1,3 +1,10 @@
+/*
+
+Tooplate 2131 Wedding Lite
+
+https://www.tooplate.com/view/2131-wedding-lite
+
+*/
 
 /*---------------------------------------
   CUSTOM PROPERTIES ( VARIABLES )             
@@ -405,7 +412,7 @@ strong {
   HERO              
 -----------------------------------------*/
 .hero-container {
-  background-color: #cb7575;
+  background-color: #DC9F9F;
   background-image: url('../images/IMG_E0624.JPG');
   background-repeat: no-repeat;
   background-size:cover;
@@ -556,14 +563,14 @@ strong {
   Video              
 -----------------------------------------*/
 .Video-section {
-  background-image: url('../images/background.webp');
+ background-color: #D89494;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .Video-form-wrap {
-  background: var(--white-color);
+  background-image: url('../images/background.webp');
   border-radius: var(--border-radius-medium);
   padding: 50px;
 }
@@ -644,10 +651,10 @@ strong {
   SITE FOOTER              
 -----------------------------------------*/
 .site-footer {
-  background-color: #f7a3fc;
+  background-color: #D89494;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 300px;
+  padding-top: 100px;
   padding-bottom: 10px;
   text-align: center;
   position: center;
